# dal-obscura

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Agent.md  Dockerfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
connectors/: README.md
connectors/contract-fixtures/error-cases/: missing-token.json
connectors/contract-fixtures/filter-translation/: spark-v1-cases.json
connectors/contract-fixtures/plan-requests/: basic-read.json  basic-read.pb.hex
connectors/jvm/: pom.xml
connectors/jvm/connector-testkit-jvm/: pom.xml
connectors/jvm/dal-obscura-client-java/: pom.xml
connectors/jvm/integration-tests-jvm/: pom.xml
connectors/jvm/spark3-datasource/: pom.xml
docs/: README.md  concepts.md  connectors.md  development.md  frontend.md  operators-runbook.md  operators.md  policy-authoring.md  quickstart.md  security.md
docs/superpowers/plans/: 2026-04-11-spark-integration-fixture.md  2026-04-27-auth-compose-examples.md  2026-04-28-auth-compose-container-layout.md  2026-05-12-control-plane-ui.md  2026-05-25-control-plane-react-ui.md
docs/superpowers/specs/: 2026-04-04-sqlglot-filter-internals-design.md  2026-04-06-engine-filter-pushdown-design.md  2026-04-09-spark-connector-design.md  2026-04-11-spark-integration-fixture-design.md  2026-04-17-keycloak-provider-auth-design.md  2026-04-24-reapply-full-effective-row-filter-design.md  2026-04-27-auth-compose-examples-design.md  2026-04-27-auth-request-boundary-design.md  2026-04-28-auth-compose-container-layout-design.md  2026-04-29-control-plane-design.md  2026-05-12-control-plane-ui-design.md  2026-05-12-db-backed-tickets-design.md  2026-05-25-control-plane-ui-design.md
examples/auth/: README.md  compose.common.yaml  run
examples/auth/_shared/: Dockerfile  README.md
examples/auth/api-key/: README.md  compose.yaml
examples/auth/composite-provider/: README.md  compose.yaml
examples/auth/keycloak-oidc/: README.md  compose.yaml
examples/auth/mtls/: README.md  compose.yaml
examples/auth/mtls-spiffe/: Dockerfile.tools  README.md  compose.spire.yaml  compose.yaml
examples/auth/shared-jwt/: README.md  compose.yaml
examples/auth/trusted-headers/: README.md  compose.yaml
examples/demo/keycloak/: .gitignore  Dockerfile.helper  README.md  compose.yaml  run
scripts/: docker-entrypoint.sh
src/dal_obscura/: __init__.py  auth.py  cli.py  filters.py  logging_config.py  masking.py  observability.py  policy.py  service.py  tickets.py
src/dal_obscura/application/: __init__.py
src/dal_obscura/auth/: __init__.py  base.py  default.py
src/dal_obscura/authorization/: __init__.py  base.py  policy_authorizer.py  types.py
src/dal_obscura/backend/: __init__.py  base.py  iceberg.py
src/dal_obscura/common/: flight_contract.py
src/dal_obscura/connectors/: __init__.py  python_sdk.py
src/dal_obscura/control_plane/: __init__.py
src/dal_obscura/domain/: __init__.py
src/dal_obscura/infrastructure/: __init__.py
src/dal_obscura/interfaces/: __init__.py
src/dal_obscura/masking/: __init__.py  base.py  default.py
src/dal_obscura/policy/: __init__.py  loader.py  models.py  resolver.py
tests/: __init__.py  conftest.py  test_auth.py  test_e2e_smoke.py  test_filters.py  test_integration_flight_iceberg.py  test_logging_config.py  test_masking.py  test_policy.py  test_service_streaming.py  test_support_build_connector_fixture.py  test_tickets.py
tests/application/access_flow/: helpers.py  test_fetch.py  test_planning.py  test_tickets.py
tests/application/ports/: test_identity_request.py
tests/architecture/: test_package_boundaries.py
tests/benchmarks/: test_iceberg_multifile_benchmark.py  test_masking_row_filter_benchmarks.py  test_ticket_to_response_benchmark.py
tests/connectors/: test_python_sdk.py
tests/control_plane/: conftest.py  test_catalog_discovery.py  test_policy_authorization.py  test_publication_compiler.py  test_publication_store.py
tests/examples/: test_keycloak_demo_fixture.py
tests/support/: arrow.py  benchmark_data.py  build_connector_fixture.py  control_plane.py  flight.py  iceberg.py  iceberg_flight.py  identity_provider_fakes.py  policy.py  row_filters.py  secret_provider_fakes.py  test_iceberg.py  use_cases.py
ui/: Caddyfile  Dockerfile  docker-entrypoint.sh  index.html  package.json  tailwind.config.ts  vite.config.ts
ui/src/: main.tsx
ui/src/api/: auth.test.ts  auth.ts  (+3 more)
(+289 files in other folders)
